k8s/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello
  template:
    metadata:
      labels:
        app: hello
    spec:
      containers:
      - name: hello-app
        image: hashicorp/http-echo:0.2.3
        args:
          - "-text=Hello from Kubernetes!"
        ports:
          - containerPort: 5678
